[gd_scene load_steps=13 format=1]

[ext_resource path="res://scenes/grassland.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/waterland.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/vibrate_animation.tres" type="Animation" id=3]
[ext_resource path="res://assets/theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/strip.png" type="Texture" id=5]
[ext_resource path="res://code/choose_map.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/menu2.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/menu.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="choose_map" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="background" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="terrain" parent="background" instance=ExtResource( 1 )]

rect/rotation = 45.0
rect/scale = Vector2( 4, 4 )
margin/left = -650.0
margin/top = 4.0
margin/right = -610.0
margin/bottom = 44.0

[node name="terrain 2" parent="background" instance=ExtResource( 2 )]

rect/rotation = 45.0
rect/scale = Vector2( 4, 4 )
margin/left = -201.0
margin/top = 370.0
margin/right = -161.0
margin/bottom = 410.0

[node name="center" type="CenterContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false

[node name="pin" type="Control" parent="center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 75.0
margin/right = 100.0
margin/bottom = 75.0

[node name="anim" type="AnimationPlayer" parent="center/pin"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/vibrate_animation = ExtResource( 3 )
playback/active = true
playback/speed = 4.0
blend_times = [  ]
autoplay = "vibrate_animation"

[node name="main" type="Panel" parent="center/pin"]

rect/min_size = Vector2( 128, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = -64.0
margin/top = -40.0
margin/right = 64.0
margin/bottom = 40.0

[node name="blob" type="Patch9Frame" parent="center/pin/main"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = 12.0
margin/right = 134.0
margin/bottom = 72.0
texture = ExtResource( 5 )
patch_margin/left = 16
patch_margin/top = 16
patch_margin/right = 16
patch_margin/bottom = 16

[node name="menu" type="VButtonArray" parent="center/pin/main/blob"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/selected = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/button_separator = 8
flat = true
button/count = 3
button/min_button_size = -1.0
button/align = 1
button/0/text = "GRASSLAND (EASY)"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "WATERLAND (HARD)"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "< MENU"
button/2/tooltip = ""
button/2/icon = null
button/selected = 0
script/script = ExtResource( 6 )

[node name="menu_sound" type="StreamPlayer" parent="center/pin/main/blob/menu"]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="title" type="Panel" parent="center/pin/main"]

rect/min_size = Vector2( 96, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 16.0
margin/top = -14.0
margin/right = 112.0
margin/bottom = 10.0

[node name="chose_map" type="Label" parent="center/pin/main/title"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "CHOOSE MAP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="button_selected" from="center/pin/main/blob/menu" to="center/pin/main/blob/menu" method="_on_menu_button_selected"]

[connection signal="input_event" from="center/pin/main/blob/menu" to="center/pin/main/blob/menu" method="_on_menu_input_event"]


